# RISC-V-EMULATOR

./: .gitignore  CMakeLists.txt  NOTES.MD  PERSONAL_LOGS.MD  README.md
include/: cpu.h  decoder.h  executor.h  memory.h
src/: cpu.c  decoder.c  executor.c  main.c  memory.c
tests/: test_decoder_functions.c  test_memory_functions.c
